Fix video position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -384,6 +384,7 @@ a {
   overflow: hidden;
   max-width: 100%;
   height: auto;
+  margin-top: -2px;
 }
 
 .embed-container iframe,.embed-container object, .embed-container embed {
